# wgpu-test

./: Cargo.toml  bacon.toml  build.rs  flake.nix  index.html
src/: app.rs  engine.rs  lib.rs  main.rs  shader.slang  shader.slang.wgsl  shader.wgsl
src/core/: engine.rs  mod.rs  na.rs  name.rs  server.rs
src/scene/: mod.rs  node.rs
src/world/: component.rs  mod.rs
