# cargo-features = ["edition2024"]

[package]
name = "lgpu"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
winit = { version = "0.30.13", features = ["rwh_05", "serde"] }
wgpu = { version = "29.0.1", features = [
	"dx12",
	"gles",
	"metal",
	"parking_lot",
	"std",
	"vulkan",
	"webgpu",
	"wgsl",
	"serde",
	"strict_asserts",
] }
serde = "1.0.214"
serde_json = "1.0.132"
wgpu-hal = "23.0.0"
log = "0.4.22"
pollster = "0.4.0"
thiserror = "2.0.1"
cfg-if = "1.0.0"
bytemuck = { version = "1.19.0", features = [
	"align_offset",
	"derive",
	"wasm_simd",
] }
eyre = "0.6.12"
color-eyre = "0.6.5"
tokio = "1.52.1"
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = "0.3.23"
encase = "0.12.0"
glam = { version = "0.32.1", features = [
	"rand",
	"approx",
	"bytemuck",
	"serde",
	"encase",
	"zerocopy",
] }
bitflags = { version = "2.11.1", features = ["bytemuck", "serde", "std"] }
hashbrown = { version = "0.17.0", features = ["rayon"] }

[build-dependencies]
glob = "0.3.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "29.0.1", features = ["serde", "webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }

[profile.profiling]
inherits = "dev"
opt-level = 1
debug = true

[profile.release]
opt-level = "z"      # Optimize for size
strip = true         # Strip symbols
lto = "fat"          # Maximize LTO
codegen-units = 1    # Better optimizations
panic = "abort"
